shared/src/test/data/yeast/invalid-json/unclosed-map.jyt
BeginDocument       0,  1,  0 ''
BeginNode           0,  1,  0 ''
BeginMapping        0,  1,  0 ''
Indicator           0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginPair           4,  2,  2 ''
BeginNode           4,  2,  2 ''
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'action'
Indicator          11,  2,  9 '\"'
EndScalar          12,  2, 10 ''
EndNode            12,  2, 10 ''
WhiteSpace         12,  2, 10 ' '
Indicator          13,  2, 11 ':'
WhiteSpace         14,  2, 12 ' '
BeginNode          15,  2, 13 ''
BeginScalar        15,  2, 13 ''
Indicator          15,  2, 13 '\"'
Text               16,  2, 14 'get'
Indicator          19,  2, 17 '\"'
EndScalar          20,  2, 18 ''
EndNode            20,  2, 18 ''
EndPair            20,  2, 18 ''
Indicator          20,  2, 18 ','
LineBreak          21,  2, 19 '\n'
WhiteSpace         22,  3,  0 '  '
BeginPair          24,  3,  2 ''
BeginNode          24,  3,  2 ''
BeginScalar        24,  3,  2 ''
Indicator          24,  3,  2 '\"'
Text               25,  3,  3 'application'
Indicator          36,  3, 14 '\"'
EndScalar          37,  3, 15 ''
EndNode            37,  3, 15 ''
WhiteSpace         37,  3, 15 ' '
Indicator          38,  3, 16 ':'
WhiteSpace         39,  3, 17 ' '
BeginNode          40,  3, 18 ''
BeginScalar        40,  3, 18 ''
Indicator          40,  3, 18 '\"'
Text               41,  3, 19 '6d082590-0f57-11e5-9425-f3b93b42c23e'
Indicator          77,  3, 55 '\"'
EndScalar          78,  3, 56 ''
EndNode            78,  3, 56 ''
EndPair            78,  3, 56 ''
Indicator          78,  3, 56 ','
Error              78, 56,  3 ','
EndDocument        79,  3, 57 ''